0.043		29-Aug-2011	T. R. Wyant
  The earthquake (Mineral Virginia USA) fire (Great Dismal Swamp) and
    flood (hurricane Irene) edition.
  Updated the canned Iridium status in Astro::Coord::ECI::TLE for
    McCants' and Sladen's reporting of Iridium 26 (OID 24903) as out of
    service. They also updated Iridium 23 (OID 24906) to show it in
    service rather than failed, but I have continued to follow Kelso in
    calling it a spare.
  Other than this, only documentation changes, mostly relating to the
    deprecation of the 'limb' attribute and its relation to the new
    'edge_of_earths_shadow' attribute.

0.042_02	18-Aug-2011	T. R. Wyant
  In the satpass script, use the new 'edge_of_earths_shadow' setting in
    the 'flare' and 'position' commands, though the flare calculation
    does not actually make use of it.

0.042_01	16-Aug-2011	T. R. Wyant
  Replace the Astro::Coord::ECI::TLE 'limb' attribute and the satpass
    'lit' setting with the 'edge_of_earth_shadow' attribute and setting.
    The new attribute and setting are numeric, and specify an increase
    in elevation (or decrease if negative) in units of the apparent
    radius of the body. The replaced attribute and setting still exist,
    but are deprecated, and will begin warning in the first release
    after March 1 2012. This setting/attribute is used by the pass
    calculation.
  Provide an Astro::Coord::ECI azel_offset() method, which takes, as its
    optional second argument, an offset applied to the elevation, in
    terms of the apparent radius of the body whose position is being
    calculated. The two-argument version of the azel() method is now
    deprecated, and will begin warning in the first release after March
    1 2012.
  Override the Astro::Coord::ECI correct_for_refraction() method in
    Astro::Coord::ECI::TLE, Astro::Coord::ECI::Moon, and
    Astro::Coord::ECI::Sun. The override simply returns the input
    elevation unmodified.

0.042		07-Aug-2011	T. R. Wyant