@@ -112,9 +112,6 @@ $mmv >= 6.4501 and $attr{META_ADD} = {
 };
 
 $mmv >= 6.4501 and $attr{META_MERGE} = {
-    build_requires => {
-	'Test::More' => 0.88,	# Because of done_testing()
-    },
     dynamic_config => 1,
     resources => {
 	bugtracker => 'https://rt.cpan.org/Public/Dist/Display.html?Name=Astro-satpass',
@@ -123,6 +120,11 @@ $mmv >= 6.4501 and $attr{META_MERGE} = {
 };
 
 $mmv >= 6.4701 and $attr{MIN_PERL_VERSION} = $meta->requires_perl();
+
+$mmv >= 6.5501
+    and $attr{BUILD_REQUIRES} = $meta->build_requires()
+    or $mmv >= 6.4501
+    and $attr{META_MERGE}{build_requires} = $meta->build_requires();
 
 WriteMakefile (%attr);
 
